testing bug fix on iphone v2

--- a/main.css
+++ b/main.css
@@ -195,6 +195,7 @@ img {
     /* padding-right: 50px; */
     /* text-align: center; */
     margin-bottom: -150px;
+    width: 300px;
   }
 
   img {
